# omx-ros2-gravity-comp

./: .gitignore  README.md  activate_test.sh  debug_headless.sh  implementation.md  project_status.md
.agents/skills/document-and-gitpush/: SKILL.md
.agents/skills/testrefer/: SKILL.md
.claude/agents/: a1.agent.md
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/agents/: vrrocks.agent.md
.github/workflows/: ci.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_hardware_interface/share/dynamixel_hardware_interface/: package.bash  package.zsh
install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
install/omx_variable_stiffness_controller/include/omx_variable_stiffness_controller/: omx_variable_stiffness_controller.hpp  omx_variable_stiffness_controller_v0.hpp  omx_variable_stiffness_controller_v001.hpp
install/omx_variable_stiffness_controller/lib/omx_variable_stiffness_controller/: load_stiffness.py  logger.py
install/omx_variable_stiffness_controller/share/omx_variable_stiffness_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin.xml
install/open_manipulator_x_bringup/lib/open_manipulator_x_bringup/: create_udev_rules
install/open_manipulator_x_bringup/share/open_manipulator_x_bringup/: 99-open-manipulator-cdc.rules  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/open_manipulator_x_description/share/open_manipulator_x_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
logs/diagnostics/: dual_gui_failure_20260319.md
logs/variable_stiffness/dual_gazebo/20260319_073528/: robot1_ee_force.csv
logs/variable_stiffness/single_gazebo/20260319_055240/: ee_force_log.csv  variable_stiffness_events_20260319_055240.csv  variable_stiffness_snapshot_20260319_055240.csv
patches/: 0001-docs-add-SIGKILL-vs-OOM-diagnostic-note-to-changelog.patch
scripts/: clean_rebuild.sh  cleanup_workspace.sh  setup_python_env.sh
src/omx_variable_stiffness_controller/test/: test_homing_behavior.py
tests/: test_hardware_harness_v2.py  test_plot_sync_metrics.py
tools/: deviated_listener.py  dual_gazebo_5stage_test.py  dual_gazebo_force_test.sh  dual_gazebo_full_test.sh  dual_gazebo_gui.sh  dual_gazebo_opposing_push.py  dual_gazebo_test_runner.sh  dual_press_coordinator.py  dynamixel_watchdog.py  ee_force_sensor.py  hardware_harness.py  hardware_harness_v2.py  headless_liveplot.sh  launch_with_build.sh  live_plot_logs.py  manual_stable_run.sh  mixed_dual_coordinator.py  mixed_logger.py  phase2_single_arm_contact_validation.py  plot_logs.py  plot_sync_metrics.py  publish_waypoint.py  record_success.py  sample_wrench.py  spawn_box.py  test_gazebo_dual.py  wait_for_cm_and_spawn.py
tools/launch/: live_plot.launch.py
tools/patches/: apply_gazebo_ros2_control_patch.sh  fix_gazebo_ros2_control_multi_robot.patch
ws/: project_status.md
ws/src/gazebo_ros2_control/: package.xml
ws/src/gazebo_ros2_control/src/: gazebo_system.cpp  (+1 more)
ws/src/omx_dual_bringup/: CMakeLists.txt  README.md  package.xml
ws/src/omx_dual_bringup/config/: dual_mock_ros2_control.yaml  robot1_gravity_comp.yaml  robot2_gravity_comp.yaml  single_robot_gravity_comp.yaml  single_robot_hardware_gravity_comp.yaml
ws/src/omx_dual_bringup/launch/: auto_demo.launch.py  auto_dual_gravity_comp.launch.py  dual_gazebo_gravity_comp.launch.py  dual_hardware_gravity_comp.launch.py  dual_mock_control.launch.py  single_robot_hardware.launch.py  single_robot_test.launch.py
ws/src/omx_dual_bringup/rviz/: dual_robots.rviz
ws/src/omx_dual_bringup/scripts/: cleanup.sh  disable_torque.py  gc_logger.py  verify_dual_setup.sh
ws/src/omx_gravity_comp_controller/: CMakeLists.txt  package.xml  plugin.xml
ws/src/omx_gravity_comp_controller/include/omx_gravity_comp_controller/: omx_gravity_comp_controller.hpp
ws/src/omx_gravity_comp_controller/src/: omx_gravity_comp_controller.cpp
ws/src/omx_gravity_comp_controller/test/: test_plugin_load.py  test_simulation_launch.py
ws/src/omx_variable_stiffness_controller/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  QUICK_START.md  REQUIREMENTS_CHECKLIST.md  package.xml  plugin.xml
ws/src/omx_variable_stiffness_controller/config/: gazebo_variable_stiffness.yaml  robot1_box_press.yaml  robot1_gazebo_variable_stiffness.yaml  robot1_stiffness_profile.csv  robot1_variable_stiffness.yaml  robot2_box_press.yaml  robot2_gazebo_variable_stiffness.yaml  robot2_stiffness_profile.csv  robot2_variable_stiffness.yaml  ros1_reference_trajectory.csv  stiffness_aniso.csv  stiffness_profile.csv  stiffness_profile_smooth.csv  variable_stiffness_controller.yaml  variable_stiffness_controller00.yaml
ws/src/omx_variable_stiffness_controller/include/omx_variable_stiffness_controller/: omx_variable_stiffness_controller.hpp  omx_variable_stiffness_controller_v0.hpp  omx_variable_stiffness_controller_v001.hpp
ws/src/omx_variable_stiffness_controller/launch/: dual_gazebo_variable_stiffness.launch.py  dual_hardware_coordinated.launch.py  dual_hardware_variable_stiffness.launch.py  gazebo_variable_stiffness.launch.py  single_robot.launch.py  variable_stiffness_control.launch.py
ws/src/omx_variable_stiffness_controller/rviz/: variable_stiffness.rviz
ws/src/omx_variable_stiffness_controller/scripts/: load_stiffness.py  logger.py  pose_to_marker.py  publish_desired_pose.py  publish_straight_line.py  ros_env_exec.sh  spawn_robot.py  wait_and_load_controllers.py  wait_and_spawn.sh
ws/src/omx_variable_stiffness_controller/src/: omx_variable_stiffness_controller.cpp  omx_variable_stiffness_controller_v001.cpp
ws/src/omx_variable_stiffness_controller/test/: test_controller_manager.py  test_homing_behavior.py  test_simulation_launch.py  test_urdf_sim_plugin.py
ws/src/omx_variable_stiffness_controller/test/launch/: test_dual_gazebo.py
ws/src/omx_variable_stiffness_controller/worlds/: empty.world
(+75 files in other folders)
